<resources>
    <string name="app_name">Twist</string>
    <string name="level_title">Swipe to choose level</string>
    <string name="play_title">Tap the mic to start</string>
    <string name="score_title">Great job!</string>
    <string name="score_score">Your score:</string>
    <string name="score_bonus">Bonus:</string>
    <string name="score_total">Your total score:</string>
    <string name="score_rank">This score is top:</string>
</resources>
